# Untrained

backend/: .env  Cargo.toml  common_issues.txt  temp.py
backend/.sqlx/: query-0285ae1b83dc1e2077b8aba979e1e12e5f6ee05f793aa07c0cdcd2fa6c427d71.json  query-03cd830f8910cddf5fbe381e85d66de8fa6a790b0af710a7fe0ff2e5983d2227.json  query-68073fb4815dab309c28f17975118c972075006a19ea5abe544dc1643a0f338c.json
backend/migrations/: 20250409084928_create_train_schema.sql  20250412171201_procedures.sql  20250412171520_triggers.sql  20250412215101_logs.sql  20250414193833_demo.sql
backend/src/: config.rs  db.rs  main.rs
backend/src/handlers/: booking_handler.rs  coach_handler.rs  journey_handler.rs  mod.rs  passenger_handler.rs  route_handler.rs  schedule_handler.rs  seat_handler.rs  station_handler.rs  stats_handler.rs  train_handler.rs  transaction_handler.rs  user_handler.rs  utils.rs
backend/src/models/: booking.rs  cancellation.rs  coach.rs  journey.rs  mod.rs  passenger.rs  route.rs  schedule.rs  seat.rs  station.rs  train.rs  transaction.rs  user.rs
backend/src/routes/: auth.rs  booking.rs  journey.rs  mod.rs  passenger.rs  route.rs  schedule.rs  stat.rs  station.rs  train.rs  transaction.rs  users.rs
frontend/: pubspec.yaml
frontend/lib/: main.dart
frontend/lib/core/: constants.dart
frontend/lib/data/models/: booking.dart  coach.dart  journey.dart  passenger.dart  route.dart  schedule.dart  seat.dart  station.dart  train.dart  transaction.dart  (+1 more)
frontend/lib/screens/: home_screen.dart  login_screen.dart  signup_screen.dart
frontend/lib/widgets/: app_bar.dart
(+30 files in other folders)
