[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-rt = "2.10.0"
actix-web = "4.10.2"
chrono = { version = "0.4.40", features= ["serde"]}
dotenv = "0.15.0"
fake = "4.3.0"
rand = "0.9.0"
serde = { version = "1.0.219", features= ["derive"]}
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = ["mysql", "runtime-tokio-native-tls", "macros", "bigdecimal", "chrono"] }
sqlx-cli = "0.8.3"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
